# Finehance

./: -w  .env.example  .gitignore  Dockerfile  Dockerfile.ai-brain  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_full_system.py
.jules/: bolt.md
ai_brain/: README.md  __init__.py  requirements.txt
alembic/: env.py
app/: __init__.py  cache.py  config.py  database.py  dependencies.py  logging_config.py  main.py
data/: merchants.json
docs/: AI_BRAIN_IMPROVEMENT_STRATEGY.md  AI_BRAIN_PRODUCTION_ROADMAP.md  AI_ML_INTEGRATION.md  API_DOCUMENTATION.md  CODE_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  DOCKER_DEVELOPMENT.md  README.md  RELEASE_NOTES.md  USER_GUIDE.md  database_schema.md
frontend/: README.md  index.html  package-lock.json  package.json
models/: .gitkeep  categories.json  user_97eac468-0f20-4272-bbc8-d3ee71beb88b_corrections.json
prometheus/: alerts.yml  prometheus.yml
roadmap/: 00_ROADMAP_OVERVIEW.md  01_P0_CRITICAL_SECURITY.md  02_P1_BACKEND_FIXES.md  03_P2_ML_AI_FIXES.md  04_P3_FRONTEND_COMPLETION.md  05_P4_TESTING_QUALITY.md  06_P5_PRODUCTION_HARDENING.md
scripts/: docker-dev-setup.bat  docker-dev-setup.sh  init-db.sql  manage_brain.py  setup.sh  test.sh  verify_deployment.py
tests/: conftest.py  test_advice_generator.py  test_advice_routes.py  test_ai_brain_service.py  test_auth_routes.py  test_auth_service.py  test_budget_optimizer.py  test_budget_routes.py  test_budget_service.py  test_categorization_engine.py  test_connection_encryption.py  test_e2e_integration.py  test_encryption_service.py  test_file_import_routes.py  test_file_import_service.py  test_goal_routes.py  test_goal_service.py  test_main.py  test_ml_model_service.py  test_models.py  test_omnibar_service.py  test_phase4_quality.py  test_prediction_engine.py  test_prediction_routes.py  test_rag_system.py  (+5 more)
(+122 files in other folders)
