[tool.poetry]
name = "ai-finance-platform"
version = "0.1.0"
description = "AI-powered personal finance management platform"
authors = ["AI Finance Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
asyncpg = "^0.31.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.24.0,<2.0.0"
joblib = "^1.3.2"
statsmodels = "^0.14.6"
openpyxl = "^3.1.2"
reportlab = "^4.0.7"
email-validator = "^2.3.0"
slowapi = "^0.1.9"
tenacity = "^8.2.3"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}
prometheus-fastapi-instrumentator = "^7.0.0"
prometheus-client = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
hypothesis = "^6.96.1"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
